<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.bieniekconsulting.trafficmonitor</groupId>
  <artifactId>primefaces-traffic-monitor-project</artifactId>
  <packaging>pom</packaging>
  <version>${version.trafficmonitor}</version>
  <name>Traffic monitor project</name>
  <description>SNMP traffic monitor with primefaces UI inside WildFly 8/9 container</description>

  <scm>
    <connection>https://github.com/rbieniek/primefaces-traffic-monitor.git</connection>
  </scm>

  <developers>  
    <developer>
      <id>rainer</id>
      <name>Rainer Bieniek</name>
      <email>Rainer.Bieniek@googlemail.com</email>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone/>
    </developer>
  </developers>

  <repositories>
    <repository>
      <id>jboss</id>
      <url>http://repository.jboss.org/nexus/content/groups/public</url>
    </repository>
    <repository>
      <id>snapshots</id>
      <url>http://repository.jboss.org/nexus/content/repositories/snapshots</url>
    </repository>
    <repository>
      <id>fungal</id>
      <url>http://jesperpedersen.github.com/fungal/maven2</url>
    </repository>
    <repository>
      <id>oosnmp</id>
      <url>https://oosnmp.net/dist/release</url>
    </repository>
  </repositories>

  <build>
    <defaultGoal>install</defaultGoal>
    <pluginManagement>
      <plugins>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-compiler-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_compiler_plugin}</version>
	  <configuration>
            <source>1.8</source>
            <target>1.8</target>
	    <debug>true</debug>
	    <debuglevel>vars,lines,source</debuglevel>
          </configuration>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-jar-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_jar_plugin}</version>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-rar-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_rar_plugin}</version>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-surefire-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_surefire_plugin}</version>
          <configuration>
            <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
          </configuration>
    	</plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-eclipse-plugin</artifactId>
    	  <version>${version.org.apache.maven.plugins.maven_eclipse_plugin}</version>
    	</plugin>
      </plugins>
    </pluginManagement>

    <plugins>    
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
    	  <source>1.8</source>
    	  <target>1.8</target>
	  <debug>true</debug>
	  <debuglevel>vars,lines,source</debuglevel>
    	</configuration>
      </plugin>
    	<plugin>
    	  <groupId>org.apache.maven.plugins</groupId>
    	  <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
          </configuration>
    	</plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
    	<version>${version.org.apache.maven.plugins.maven_eclipse_plugin}</version>
        <configuration>
          <downloadSources>true</downloadSources>
          <downloadJavadocs>true</downloadJavadocs>
        </configuration>
      </plugin> 
    </plugins>
  </build>

  <properties>
    <version.trafficmonitor>0.1-SNAPSHOT</version.trafficmonitor>

    <version.org.apache.maven.plugins.maven_compiler_plugin>3.1</version.org.apache.maven.plugins.maven_compiler_plugin>
    <version.org.apache.maven.plugins.maven_eclipse_plugin>2.9</version.org.apache.maven.plugins.maven_eclipse_plugin>
    <version.org.apache.maven.plugins.maven_jar_plugin>2.4</version.org.apache.maven.plugins.maven_jar_plugin>
    <version.org.apache.maven.plugins.maven_rar_plugin>2.4</version.org.apache.maven.plugins.maven_rar_plugin>
    <version.org.apache.maven.plugins.maven_surefire_plugin>2.17</version.org.apache.maven.plugins.maven_surefire_plugin>

    <version.javax.jee>7.0</version.javax.jee>

    <version.commons.lang>3.3.2</version.commons.lang>

    <version.org.slf4j>1.7.7</version.org.slf4j>

    <version.org.springframework>4.1.7.RELEASE</version.org.springframework>
    <version.org.springframework.security>4.0.1.RELEASE</version.org.springframework.security>

    <version.org.hibernate.validator>5.1.0.Final</version.org.hibernate.validator>

    <version.org.jboss.ironjacamar>1.2.4.Final</version.org.jboss.ironjacamar>
    <version.org.jboss.logging>3.3.0.Final</version.org.jboss.logging>

    <version.org.snmp4j>2.3.4</version.org.snmp4j>
    <version.org.snmp4j.agent>2.4.0</version.org.snmp4j.agent>

    <version.org.easytesting.core>2.0M10</version.org.easytesting.core>
    <version.junit.junit>4.11</version.junit.junit>
    <version.org.mockito>1.9.5</version.org.mockito>
    <version.shrinkwrap.resolvers>2.2.0-beta-2</version.shrinkwrap.resolvers>
  </properties>

  <modules>
    <module>snmp-objects</module>
    <module>snmp4j-rar</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
	<groupId>javax</groupId>
	<artifactId>javaee-api</artifactId>
	<version>${version.javax.jee}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-api</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-ext</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>slf4j-simple</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>jcl-over-slf4j</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.slf4j</groupId>
	<artifactId>log4j-over-slf4j</artifactId>
	<version>${version.org.slf4j}</version>
      </dependency>
      <dependency>
	<groupId>org.apache.commons</groupId>
	<artifactId>commons-lang3</artifactId>
	<version>${version.commons.lang}</version>
      </dependency>
      <dependency>
	<groupId>org.hibernate</groupId>
	<artifactId>hibernate-validator</artifactId>
	<version>${version.org.hibernate.validator}</version>
      </dependency>
      <dependency>
	<groupId>org.jboss.logging</groupId>
	<artifactId>jboss-logging</artifactId>
        <version>${version.org.jboss.logging}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.ironjacamar</groupId>
        <artifactId>ironjacamar-depchain</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-spec-api</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
      </dependency>
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-arquillian-embedded</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>    
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-arquillian-embedded-byteman</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>    
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-common-api</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>    
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-common-spi</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>   
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-common-impl</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>    
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-core-api</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>    
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-core-impl</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>    
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-deployers-common</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>    
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-deployers-fungal</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>    
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-embedded</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>    
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-test-eis</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.jboss.ironjacamar</groupId>
	<artifactId>ironjacamar-validator</artifactId>
        <version>${version.org.jboss.ironjacamar}</version>
	<scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-framework-bom</artifactId>
        <version>${version.org.springframework}</version>
        <type>pom</type>
        <scope>import</scope>
	<exclusions>
          <exclusion>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
          </exclusion>
	</exclusions>   
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-web</artifactId>
        <version>${version.org.springframework.security}</version>
	<exclusions>
          <exclusion>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
          </exclusion>
	</exclusions>
      </dependency>
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-config</artifactId>
        <version>${version.org.springframework.security}</version>
	<exclusions>
          <exclusion>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
          </exclusion>
	</exclusions>
      </dependency>
      <dependency>
        <groupId>org.snmp4j</groupId>
        <artifactId>snmp4j</artifactId>
        <version>${version.org.snmp4j}</version>
	<exclusions>
          <exclusion>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
          </exclusion>
	</exclusions>
      </dependency>
      <dependency>
        <groupId>org.snmp4j</groupId>
        <artifactId>snmp4j-agent</artifactId>
        <version>${version.org.snmp4j.agent}</version>
	<scope>test</scope>
	<exclusions>
          <exclusion>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
          </exclusion>
	</exclusions>
      </dependency>

      <dependency> 
	<groupId>junit</groupId> 
	<artifactId>junit</artifactId> 
	<version>${version.junit.junit}</version> 
	<scope>test</scope>
      </dependency> 
      <dependency>
	<groupId>org.mockito</groupId>
	<artifactId>mockito-all</artifactId>
	<version>${version.org.mockito}</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.easytesting</groupId>
	<artifactId>fest-assert-core</artifactId>
	<version>${version.org.easytesting.core}</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.jboss.shrinkwrap.resolver</groupId>
	<artifactId>shrinkwrap-resolver-depchain</artifactId>
	<version>${version.shrinkwrap.resolvers}</version>
	<scope>test</scope>
	<type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
